--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.h2.console.enabled=true
 
+# DDL ??? ??????? ?? ??? ?????.
+# ex) ??? ??, ?? ?
+spring.jpa.generate-ddl=true
+
+# MySQL ? ??? ?.
+spring.jpa.database=mysql
+
+# MySQL ??
+spring.datasource.url=jdbc:mysql://localhost:3306/simple_notice_board?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
